# tryGlog

./: CMakeLists.txt  README.md  main.cpp
